force-app/main/default/objects/Transaction_Payment__c/Transaction_Payment__c.object-meta.xml
<CustomObject>
    <description>Tracking the payment for an individual or company.</description>
    <label>Transaction Payment</label>
    <nameField>
        <displayFormat>TRP-{00000}</displayFormat>
        <label>Transaction Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>