force-app/main/default/objects/Transaction_Payment__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <description>The payment for the Academic Term’s based on Display Name.</description>
    <inlineHelpText>The payment for the Academic Term’s based on Display Name.</inlineHelpText>
    <label>Academic Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>