force-app/main/default/objects/Transaction_Payment__c/fields/Applicable_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Item_Type__c</fullName>
    <description>The item types that can be applied for the payment.</description>
    <inlineHelpText>The item types that can be applied for the payment.</inlineHelpText>
    <label>Applicable Item Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Applicable_to_Specific_Types__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Transaction_Item_Type</valueSetName>
    </valueSet>
</CustomField>