force-app/main/default/objects/Transaction_Payment__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount that has been applied to transaction orders.</description>
    <inlineHelpText>Total amount that has been applied to transaction orders.</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>