force-app/main/default/objects/Transaction_Payment__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The payment expiry date.</description>
    <inlineHelpText>The payment expiry date.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>