force-app/main/default/objects/Transaction_Payment__c/fields/Individual_Funding_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Individual_Funding_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The financial aid disbursement for the individual funding allocation.</description>
    <inlineHelpText>The financial aid disbursement for the individual funding allocation.</inlineHelpText>
    <label>Individual Funding Allocation</label>
    <referenceTo>Individual_Funding_Allocation__c</referenceTo>
    <relationshipLabel>Transaction Payments</relationshipLabel>
    <relationshipName>Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>