force-app/main/default/objects/Transaction_Payment__c/fields/Refundable__c.field-meta.xml
<CustomField>
    <fullName>Refundable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that the payment is refundable.</description>
    <inlineHelpText>Indicates that the payment is refundable.</inlineHelpText>
    <label>Refundable</label>
    <type>Checkbox</type>
</CustomField>