force-app/main/default/objects/Transaction_Payment__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <formula>Amount__c -  Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>