force-app/main/default/objects/Transaction_Payment__c/fields/Transaction_Order__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment for the specific order.</description>
    <inlineHelpText>The payment for the specific order.</inlineHelpText>
    <label>Transaction Order</label>
    <referenceTo>Transaction_Order__c</referenceTo>
    <relationshipLabel>Transaction Payments</relationshipLabel>
    <relationshipName>Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>