force-app/main/default/objects/Transaction_Payment__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Non Repayable Financial Aid Disbursement</fullName>
            </value>
            <value>
                <fullName>Repayable Financial Aid Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>