force-app/main/default/objects/Transaction_Payment__c/validationRules/Prevent_Amount_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Amount_Change</fullName>
    <active>true</active>
    <description>You cannot update the amount because it is applied to a transaction fee line.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Status__c, &apos;Draft&apos;)),
    ISCHANGED(Amount__c),
    Applied_Amount__c != 0
)</errorConditionFormula>
    <errorDisplayField>Applied_Amount__c</errorDisplayField>
    <errorMessage>You cannot update the amount because it is applied to a transaction fee line.</errorMessage>
</ValidationRule>