force-app/main/default/objects/Transaction_Payment__c/validationRules/Prevent_Status_Change_To_Void.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_Change_To_Void</fullName>
    <active>true</active>
    <description>You cannot change the payment to an inactive status because it is applied to a transaction fee line.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    OR(
        ISPICKVAL(Status__c, &apos;Void&apos;),
        ISPICKVAL(Status__c, &apos;Draft&apos;),
        ISPICKVAL(Status__c, &apos;Hold&apos;),
        ISPICKVAL(Status__c, &apos;Expired&apos;)
    ),
    Applied_Amount__c != 0
)</errorConditionFormula>
    <errorDisplayField>Applied_Amount__c</errorDisplayField>
    <errorMessage>You cannot change the payment to an inactive status because it is applied to a transaction fee line.</errorMessage>
</ValidationRule>