force-app/main/default/objects/Transaction_Payment__c/validationRules/Required_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Amount</fullName>
    <active>true</active>
    <description>To ensure that the amount is entered.</description>
    <errorConditionFormula>ISBLANK( Amount__c )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please enter an amount.</errorMessage>
</ValidationRule>