force-app/main/default/objects/Transaction_Payment__c/validationRules/Required_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Contact</fullName>
    <active>true</active>
    <description>To ensure the contact is set.</description>
    <errorConditionFormula>ISBLANK( Contact__c )</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please select a contact.</errorMessage>
</ValidationRule>