force-app/main/default/objects/Transaction_Payment__c/validationRules/Required_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Status</fullName>
    <active>true</active>
    <description>To ensure the status is set.</description>
    <errorConditionFormula>ISBLANK(TEXT( Status__c ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select a status.</errorMessage>
</ValidationRule>