force-app/main/default/objects/Transaction_Payment__c/validationRules/Required_TransactionType.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_TransactionType</fullName>
    <active>true</active>
    <description>To ensure that the transaction type is set.</description>
    <errorConditionFormula>ISBLANK(TEXT( Transaction_Type__c ))</errorConditionFormula>
    <errorDisplayField>Transaction_Type__c</errorDisplayField>
    <errorMessage>Please select a transaction type.</errorMessage>
</ValidationRule>