force-app/main/default/objects/Transaction_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Applicable_Item_Type__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>