force-app/main/default/objects/Transaction_Payment__c/listViews/This_Weeks_New_Payments.listView-meta.xml
<ListView>
    <fullName>This_Weeks_New_Payments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Applicable_Item_Type__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s New Payments</label>
</ListView>